# rough

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  core.h  double.cc  generator.cc  generator.discarded.cc  generator.h  geometry.cc  geometry.h  random.cc  renderer.cc  renderer.h  svg.cc  svg.h  vector-utils.cc  vector-utils.h
src/fillers/: dashed-filler.cc  dashed-filler.h  dot-filler.cc  dot-filler.h  filler-interface.cc  filler-interface.h  filler.cc  filler.h  hachure-filler.cc  hachure-filler.h  hatch-filler.cc  hatch-filler.h  scan-line-hachure.cc  scan-line-hachure.h  zigzag-filler.cc  zigzag-filler.h  zigzag-line-filler.cc  zigzag-line-filler.h
src/rough/: core.cc  core.h  double.cc  double.h  generator.cc  generator.h  geometry.cc  random.cc  random.h  renderer.cc  renderer.h  svg.cc  svg.h  vector-utils.cc  vector-utils.h
src/rough/fillers/: dashed-filler.cc  dashed-filler.h  dot-filler.cc  dot-filler.h  filler-interface.cc  filler-interface.h  filler.cc  filler.h  hachure-filler.cc  hachure-filler.h  hatch-filler.cc  hatch-filler.h  scan-line-hachure.cc  scan-line-hachure.h  zigzag-filler.cc  zigzag-filler.h  zigzag-line-filler.cc  zigzag-line-filler.h
visual-tests/: CMakeLists.txt
visual-tests/svg/: ellipse.cc  line.cc  main.cc  polygon.cc  rectangle.cc  tests.h
